featured section done

--- a/index.html
+++ b/index.html
@@ -19,14 +19,42 @@
         <div class="banner">
             <div class="banner-container">
                 <h2 class="banner-title">Let's make beautiful flowers a part of your life.</h2>
-                <p class="banner-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+                <p class="banner-description">It is a long established fact that a reader will be distracted by the
+                    readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has
+                    a more-or-less normal distribution of letters.</p>
                 <button class="btn-primary">Shop Now</button>
             </div>
             <img src="Flower Asset/pngwing 10.png" alt="">
         </div>
-
     </header>
     <main>
+
+        <section class="featured-flowers">
+            <h3 class="section-title">Our Featured Flowers</h3>
+            <p class="text-primary">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+        </section>
+
+            <section class="fea-flower">
+                <div class="flower">
+                    <div class="flower-background-1">
+                        <img src="Flower Asset/pngwing 6.png" alt="">
+                        <p>Pink Flower Tree</p>
+                    </div>
+                </div>
+                <div class="flower">
+                    <div class="flower-background-2">
+                        <img src="Flower Asset/pngwing 5.png" alt="">
+                        <p>Pink Flower Tree</p>
+                    </div>
+                </div>
+                <div class="flower">
+                    <div class="flower-background-3">
+                        <img src="Flower Asset/pngwing 7.png" alt="">
+                        <p>Pink Flower Tree</p>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </main>
     <footer>
