delivery section done

--- a/index.html
+++ b/index.html
@@ -31,29 +31,48 @@
 
         <section class="featured-flowers">
             <h3 class="section-title">Our Featured Flowers</h3>
-            <p class="text-primary">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            <p class="text-primary">It is a long established fact that a reader will be distracted by the readable
+                content of a page when looking at its layout.</p>
         </section>
 
-            <section class="fea-flower">
-                <div class="flower">
-                    <div class="flower-background-1">
-                        <img src="Flower Asset/pngwing 6.png" alt="">
-                        <p>Pink Flower Tree</p>
-                    </div>
-                </div>
-                <div class="flower">
-                    <div class="flower-background-2">
-                        <img src="Flower Asset/pngwing 5.png" alt="">
-                        <p>Pink Flower Tree</p>
-                    </div>
-                </div>
-                <div class="flower">
-                    <div class="flower-background-3">
-                        <img src="Flower Asset/pngwing 7.png" alt="">
-                        <p>Pink Flower Tree</p>
-                    </div>
+        <section class="fea-flower">
+            <div class="flower">
+                <div class="flower-background-1">
+                    <img src="Flower Asset/pngwing 6.png" alt="">
+                    <p>Pink Flower Tree</p>
                 </div>
             </div>
+            <div class="flower">
+                <div class="flower-background-2">
+                    <img src="Flower Asset/pngwing 5.png" alt="">
+                    <p>Pink Flower Tree</p>
+                </div>
+            </div>
+            <div class="flower">
+                <div class="flower-background-3">
+                    <img src="Flower Asset/pngwing 7.png" alt="">
+                    <p>Pink Flower Tree</p>
+                </div>
+            </div>
+            </div>
+        </section>
+
+        <section class="delivery">
+            <div class="del-item-con">
+                <div class="del-item-1">
+                    <img src="Flower Asset/Group 57.png" alt="">
+                    <p class="text-primary">Same Day Delivery. Click & Collect.</p>
+                </div>
+                <div class="del-item-2">
+                    <img src="Flower Asset/Group 58.png" alt="">
+                    <p class="text-primary">Fresh Flowers. Local Growers.</p>
+                </div>
+                <div class="del-item-3">
+                    <img src="Flower Asset/Group 59.png" alt="">
+                    <p class="text-primary">24/7 Free Support.</p>
+                </div>
+            </div>
+
         </section>
 
     </main>
