--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
         </div>
     </header>
     <main>
-
         <section class="featured-flowers">
             <h3 class="section-title">Our Featured Flowers</h3>
             <p class="text-primary">It is a long established fact that a reader will be distracted by the readable
@@ -73,6 +72,18 @@
                 </div>
             </div>
 
+        </section>
+
+        <section class="hot-deal">
+            <div class="deal-text">
+                <h3 class="section-title">Hot Deal ! Sale Up To 25% <span>Off</span></h3>
+                <p class="text-primary">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                <button class="btn-primary">Sign Up</button>
+            </div>
+
+            <div class="deal-image">
+                <img src="Flower Asset/pngwing 8.png" alt="">
+            </div>
         </section>
 
     </main>
