--- a/index.html
+++ b/index.html
@@ -77,12 +77,26 @@
         <section class="hot-deal">
             <div class="deal-text">
                 <h3 class="section-title">Hot Deal ! Sale Up To 25% <span>Off</span></h3>
-                <p class="text-primary">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                <p class="text-primary">It is a long established fact that a reader will be distracted by the readable
+                    content of a page when looking at its layout.</p>
                 <button class="btn-primary">Sign Up</button>
             </div>
 
             <div class="deal-image">
                 <img src="Flower Asset/pngwing 8.png" alt="">
+            </div>
+        </section>
+
+        <section class="instagram">
+            <div class="insta-text">
+                <h3 class="section-title">Instagram</h3>
+                <p class="text-primary">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            </div>
+            <div class="insta-image-con">
+                <img src="Flower Asset/Flower 01.png" alt="">
+                <img src="Flower Asset/Rectangle 4.png" alt="">
+                <img src="Flower Asset/Rectangle 5.png" alt="">
+                <img src="Flower Asset/Rectangle 6.png" alt="">
             </div>
         </section>
 
