--- a/index.html
+++ b/index.html
@@ -100,6 +100,15 @@
             </div>
         </section>
 
+        <section class="latest-deal">
+            <h3 class="section-title">Get The Latest Deals</h3>
+            <p class="text-primary">$30 coupon for first shopping</p>
+            <form action="">
+                <input type="email" name="" id="" placeholder="Enter your email here....">
+                <button class="btn-primary">Subscribe</button>
+            </form>
+        </section>
+
     </main>
     <footer>
 
