--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
         <section class="instagram">
             <div class="insta-text">
                 <h3 class="section-title">Instagram</h3>
-                <p class="text-primary">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                <p class="text-primary">It is a long established fact that a reader will be distracted by the readable
+                    content of a page when looking at its layout.</p>
             </div>
             <div class="insta-image-con">
                 <img src="Flower Asset/Flower 01.png" alt="">
@@ -108,10 +109,11 @@
                 <button class="btn-primary">Subscribe</button>
             </form>
         </section>
-
     </main>
     <footer>
-
+        <h3><span>Flower</span>Shop</h3>
+        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+        <p class="licence">&copy 2020-2023, FlowerShop.com. All rights reserved. </p>
     </footer>
 </body>
 
